Release prep: README (measured coverage), 0.1.0 change-notes, completion kind icons
- README rewritten short and honest: why it exists, what it solves, SQL
  coverage as MEASURED (226/226 census families at DuckDB 1.5.5, method
  described, two degraded shapes named), function coverage with the
  bundled-snapshot caveat stated plainly (extension functions arrive
  with the live per-connection catalog).
- 0.1.0 change-notes: first-public-preview feature list.
- Completion kind icons at doris parity: DatabaseIcons Aggregate/Table/
  Routine/Function per duckdb_functions() kind (was type-text only).

Maiden verifyPlugin: Compatible on DB-261.24374.56 and IU-262.8665.81.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>